--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,21 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/*@link https://necolas.github.io/normalize.css/ */
+@import url(./normalize.css);
+
+html {
+    height: 100vh;
+    width: 100vw;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+    color: #fff;
+    background-color: rgb(28, 23, 56);
+}
+
+
+
+/* background-image: url("double-quote.31cfbeb8.svg");
+background-size: 2.5rem;
+content: var(--tw-content);
+background-position: right top; */
