started on styling, things are looking so much better

--- a/src/components/Utils/Blockquote/Blockquote.css
+++ b/src/components/Utils/Blockquote/Blockquote.css
@@ -1,5 +1,5 @@
 .FeatureBlockquoteFigure {
-    background-image: url('../../../assets/double-quote.svg');
+    background-image: url('../../../assets/images/double-quote.svg');
     background-repeat: no-repeat;
     background-size: 2.5rem;
     content: var(--tw-content);
