--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,8 @@
 /*@link https://necolas.github.io/normalize.css/ */
-
 @import url('./normalize.css');
+@import url('./variables.css');
+
+
 @font-face {
     font-family: CerebriSansBook;
     src: url('./assets/fonts/Cerebri Sans Book.woff2') format('woff2')
@@ -28,39 +30,66 @@
     font-stretch: 50 200;
 }
 
+@font-face {
+    font-family: CalistogaRegular;
+    src: url('./assets/fonts/Calistoga-Regular.woff2') format('woff2');
+}
+
 html {
+    font-size: var(--em-basis); /*16px*/
     height: 100vh;
     width: 100vw;
 }
 
 body {
-    font-family: 'RobotoRegular', Arial, Helvetica, sans-serif;
-    height: 100%;
-    width: 100%;
-    color: rgb(189, 186, 186);
-    background-color: rgb(28, 23, 56);
+    font-family: var(--body-font), Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    line-height: 1.75;
+    color: var(--body-color);
+    background-color: var(--body-background-color);
+}
+
+small, .text_small {font-size: 0.75rem;}
+
+/*Links*/
+
+a {
+    color: var(--text-link-color);
 }
 
 
-/* Header */
+/* Heading */
 
 h1 {
-    font-family: 'CerebriSansBook', Arial, Helvetica, sans-serif;
+    margin-top: 0;
+    font-size: var(--h1-size);
+    font-family: var(--heading-font), Arial, Helvetica, sans-serif;
 }
 
+h2 { font-size: var(--h2-size);}
 
-/* Header Italics */
+h3 {font-size: var(--h3-size);}
+
+h4 {font-size: var(--h4-size);}
+
+h5 {font-size: var(--h5-size);}
+
+h1, h2, h3, h4, h5, h6 {
+    color: var(--heading-color);
+}
+
+/* Heading Italics */
 
 h1>i,
 em,
 .italic {
-    font-family: 'CerebriSansBookItalic'
+    font-family: var(--heading-font-italic)
 }
 
 h2,
 h3,
 h4 {
-    font-family: 'SanchezRegular', Arial, Helvetica, sans-serif;
+    font-family: var(--subheading-font), Arial, Helvetica, sans-serif;
 }
 
 h2>i,
@@ -72,11 +101,10 @@ h3>.italic,
 h4>i,
 h4>em,
 h4>.italic {
-    font-family: 'SanchezItalic'
+    font-family: var(--subheading-font-italic)
 }
 
 h5,
 h6 {
-    font-family: RobotoRegular;
     font-variant: small-caps;
 }
