--- a/src/main.css
+++ b/src/main.css
@@ -36,12 +36,13 @@
 }
 
 html {
-    font-size: var(--em-basis); /*16px*/
-    height: 100vh;
-    width: 100vw;
+    font-size: var(--em-basis);
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
 }
 
 body {
+    max-width: 100vw;
     font-family: var(--body-font), Arial, Helvetica, sans-serif;
     font-weight: 400;
     line-height: 1.75;
