--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -5,20 +5,20 @@
 } */
 
 .LandingIntro {
-    grid-template-columns: 1fr 1fr;
     padding: 3em;
 }
 
 .LandingIntroPhoto {
     float:right;
-    margin: 2em;
+    margin: 1em;
     border-radius: 50%;
     border: 0.25em solid;
 }
 
-/* .LandingContact {
-
-} */
+.LandingContact {
+    background-color: var(--hero-background-color);
+    padding: 1em;
+}
 
 .Hero {
     text-align: center;
