--- a/src/main.css
+++ b/src/main.css
@@ -35,6 +35,15 @@
     src: url('./assets/fonts/Calistoga-Regular.woff2') format('woff2');
 }
 
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+#root, .App {
+    position: relative;
+    margin: 0;
+}
+
 html {
     font-size: var(--em-basis);
     text-size-adjust: none;
@@ -42,13 +51,14 @@ html {
 }
 
 body {
-    max-width: 100vw;
+    margin: 0;
     font-family: var(--body-font), Arial, Helvetica, sans-serif;
     font-weight: 400;
     line-height: 1.75;
     color: var(--body-color);
     background-color: var(--body-background-color);
 }
+
 
 small, .text_small {font-size: 0.75rem;}
 
