--- a/src/variables.css
+++ b/src/variables.css
@@ -9,8 +9,8 @@
     --hero-font: 'CalistogaRegular';
 
     /*Font Sizing*/
-    --em-basis: 20px;
-    --h1-size: 4.209em;
+    --em-basis: 16px;
+    --h1-size: 4.209rem;
     --h2-size: 3.157rem;
     --h3-size: 2.369rem;
     --h4-size: 1.777rem;
@@ -31,4 +31,16 @@
 
     /*SVGs*/
     --svg-fill-color: var(--body-color);
+}
+
+
+
+@media only screen and (min-width: 768px) {
+    :root {
+        --em-basis: 18px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+
 }
